--- a/index.html
+++ b/index.html
@@ -25,5 +25,12 @@
 			</nav>
 		</div>
 	</header>
+
+    
+	<section id="heading">
+		<h1><b>Shoes Collection</b></h1>
+	</section>
+
+    
 </body>
 </html>
