--- a/index.html
+++ b/index.html
@@ -31,6 +31,59 @@
 		<h1><b>Shoes Collection</b></h1>
 	</section>
 
-    
+    <section id="Categories">
+		<div class="shoesList">
+			<div class="product">
+				<img src="Images/Canvas.jpg" alt="canvas">
+				<h2><b>Canvas Sneakers</b></h2>
+				<p>Price: $120<br>
+				Sizes: 10, 10.5, 11, 11.5<br>
+				Rating: 4.5/5</p>
+				<button><a href="details.html">Details</a></button>
+			</div>
+			<div class="product">
+				<img src="Images/Hiking.jpg" alt="hiking">
+				<h2><b>Hiking Shoes</b></h2>
+				<p>Price: $90<br>
+				Sizes: 10, 10.5, 11.5<br>
+				Rating: 4.3/5</p>
+				<a href="#"><button>Details</button></a>
+			</div>
+			<div class="product">
+				<img src="Images/Running.jpg" alt="running">
+				<h2><b>Running Shoes</b></h2>
+				<p>Price: $60<br>
+				Sizes: 10, 10.5, 11, 12<br>
+				Rating: 4.9/5</p>
+				<button><a href="#">Details</a></button>
+			</div>
+		</div>
+		<div class="shoesList">
+			<div class="product">
+				<img src="Images/ChuckTaylor.jpg" alt="chuck">
+				<h2><b>Canvas Sneakers</b></h2>
+				<p>Price: $140<br>
+				Sizes: 10, 11, 11.5, 12<br>
+				Rating: 4.9/5</p>
+				<button><a href="#">Details</a></button>
+			</div>
+			<div class="product">
+				<img src="Images/Leather.jpg" alt="leather">
+				<h2><b>Leather Sneakers</b></h2>
+				<p>Price: $165<br>
+				Sizes: 10, 11, 11.5<br>
+				Rating: 4.7/5</p>
+				<button><a href="#">Details</a></button>
+			</div>
+			<div class="product">
+				<img src="Images/Soccer.jpg" alt="soccer">
+				<h2><b>Soccer Shoes</b></h2>
+				<p>Price: $145<br>
+				Sizes: 10, 12, 12.5<br>
+				Rating: 4.5/5</p>
+				<button><a href="#">Details</a></button>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
